src/objects/smagicinteract__List_View_Configuration__c.object
<CustomObject>
    <fields>
        <fullName>smagicinteract__Criteria_Logical_Condition__c</fullName>
        <label>Criteria_Logical_Condition</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Custom_Logic__c</fullName>
        <label>Custom Logic</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Expexted_SMS__c</fullName>
        <label>Expexted SMS</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Filter_Criteria__c</fullName>
        <description>Filter criteria for sms from list view</description>
        <label>Filter Criteria</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Filter_Fields__c</fullName>
        <label>Filter Fields</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>smagicinteract__MMS_Subject__c</fullName>
        <label>MMS Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Object_Name__c</fullName>
        <description>Object Name on which sms from list view will operate</description>
        <label>Object Name</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smagicinteract__OptOut_Records__c</fullName>
        <label>OptOut Records</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Optout_Field__c</fullName>
        <label>Optout Field</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Phone_Fields__c</fullName>
        <label>Phone Fields</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Sender_Id__c</fullName>
        <label>Sender Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Template_Body__c</fullName>
        <label>Template Body</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Template_Id__c</fullName>
        <label>Template Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Total_Records__c</fullName>
        <label>Total Records</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>smagicinteract__optOut_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>optOut Check</label>
        <type>Checkbox</type>
    </fields>
    <label>List View Configuration</label>
    <listViews>
        <fullName>smagicinteract__All</fullName>
        <columns>NAME</columns>
        <columns>smagicinteract__Template_Body__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>List View Config Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>List View Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>